# congenial-enigma

./: .gitignore  .gitmodules  README.md  args.json  compare_wing_width_ratios.py  config.yaml  driver.py  init_db.py  local_config.yaml  main.py  plot_pr_results.py  process_metis_output.sh  requirements.txt  setup.py
graph_preprocess/: CMakeLists.txt  CSR.cpp  CSR.h  Hilbert.cpp  Hilbert.h  PageRank.cpp  PageRank.h  Quad.h  QuadrantCalculator.cpp  QuadrantCalculator.h  compute_ccs.cpp  convert_map_to_binary.cpp  cuthill_mckee.cpp  furhilbert.cpp  furhilbert.h  hilburn_pr.cpp  hilburn_preproc.cpp  hilburn_preproc.h  hilburn_stripe_preproc.cpp  io.cpp  io.h  main.cpp  order_slashburn.cpp  order_slashburn.h  par_hilbert_bench.cpp  pr_experiments.cpp  pr_experiments.h  rabbit_util.cpp  rabbit_util.h  sb_furhilbert.cpp  sb_furhilbert.h  slashburn.cpp  sql.cpp  sql.h  stats.cpp  stats.h  typedefs.h  util.cpp  util.h  wsq.h
install_deps/: Dockerfile  build_and_run_docker.sh  install_deps.def  install_deps.sh  requirements.txt  tmp.sh  tmp1.sh
konect_dataframes/: bipartite.csv  directed.csv  konect.csv  meta.csv  stats.csv  undirected.csv
konect_scraper/: calc_stats.py  column_names.py  config.py  datasets.json  debug_hilbert.py  download_and_extract.py  io.py  plot.py  plot_debug_hilbert.py  pr_experiments.py  preprocess.py  reorder.py  scrape_konect_stats.py  sql.py  stats.py  test_ccs.py  util.py
konect_scraper/cluster/: README.md  cluster_config.yaml  config.yaml  download.py  driver.py  execute.py  main.py  util.py
konect_scraper/cluster/scripts/: singularity-exec.sh  singularity-slurm-job.sh  singularity-slurmpy-job.sh  singularity-start.sh
konect_scraper/cluster/scripts/download/: singularity-exec.sh  singularity-slurm-job.sh  singularity-start.sh
konect_scraper/cluster/slurm/: README.md  download.py  pr_expt.py  preprocess.py  reorder.py  stats.py  utils.py
konect_scraper/utilities/: README.md  append_results_to_db.py  batch_submit.py  compare_wing_width_ratios.py  create_graph_dataframes.py  debug_hilbert.py  inspect_db.py  plot_pr_results.py  powerlaw.py  sb_tessellate.py
scripts/: convert_metis_to_timecsv.sh  pre-process-big-files.sh  process_fennel_output.sh  process_metis_output.sh  run_fennel.sh  run_fennel_on_all.sh  run_metis.sh  run_metis_on_all.sh
